# SoundRender

./: .gitignore  CMakeLists.txt  Notes.md  README.md  main.cu
asset/acousticMap/: bunny.npz  plate.npz
asset/correction/: correction.txt
asset/eigen/: bunny.npz  plate.npz
asset/materials/: plate.mtl
asset/voxel/: bunny.npy  plate.npy
libs/: CMakeLists.txt  implot.cpp
libs/portaudio/lib/: portaudio_static_x64.lib  portaudio_x64.lib
libs/zlib/lib/: libz-static.lib  libz.exp  libz.lib
src/: CMakeLists.txt
src/core/: CMakeLists.txt  array.h  array.inl  array2D.h  array3D.h  macro.h  objIO.cu  objIO.h  objIO.inl
src/sound/: audio_window.h
src/sound/audio/: CMakeLists.txt  audio.cu  audio.h
src/sound/cnpy/: CMakeLists.txt  cnpy.cpp  cnpy.h
src/sound/modal/: CMakeLists.txt  modal.cu  modal.h
src/ui/: CMakeLists.txt  camera.h  gui.cu  gui.h  gui_kernel.h  imgui.ini  shader.h  window.h  windows.cu
src/ui/shaders/: mesh.frag  mesh.vert
